# meu-orquestrador

./: .replit  Front-Back.md  README.md  README2.md  Spec Plan.md  app.py  index.html  ollama_tool.py  package-lock.json  package.json  replit.md  test_workforce.py  vite.config.ts  workforce.py
adk-agent-orchestrator/: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
adk-agent-orchestrator/.github/workflows/: ci.yml
adk-agent-orchestrator/docs/: architecture.md
adk-agent-orchestrator/src/orchestrator/: __init__.py  adk_compat.py  agent.py  config.py  main.py
adk-agent-orchestrator/src/orchestrator/agents/: __init__.py  root.py
adk-agent-orchestrator/src/orchestrator/policies/: __init__.py  budget.py
adk-agent-orchestrator/src/orchestrator/runner/: __init__.py  bootstrap.py
adk-agent-orchestrator/src/orchestrator/tools/: __init__.py  foundation.py
adk-agent-orchestrator/tests/: test_foundation.py
docs/: adk_phase1_repository.md  greenfield_architecture_adk.md  insights_google_agentic_patterns.md
docs/architecture/: orchestrator_contract.md
docs/architecture/samples/: execution_result.json
src/app/: routes.tsx
src/app/components/execution/: DAGViewer.tsx  DecisionPanel.tsx  (+6 more)
src/app/data/: agents.ts  executions.ts  index.ts  mockData.ts  playground.ts  tools.ts
src/app/pages/: AgentsPage.tsx  DashboardPage.tsx  ExecutionDetailPage.tsx  ExecutionsPage.tsx  PlaygroundPage.tsx  ToolkitPage.tsx  WorkforceBuilderPage.tsx
src/app/types/: workforce.ts
src/app/utils/: execution.ts
src/imports/: from___future___import_annotations.txt
(+4 files in other folders)
